--- a/app/src/main/res/layout/fragment_manager_event_details.xml
+++ b/app/src/main/res/layout/fragment_manager_event_details.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBlackText">
+        android:background="@color/colorBackHome">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -38,7 +38,14 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:background="@drawable/back_gradient"/>
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -61,7 +68,7 @@
                             android:includeFontPadding="false"
                             android:text="User Name"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/_16ssp"
+                            android:textSize="@dimen/_14ssp"
                             app:fontFamily="@font/poppins_bold"
                             tools:ignore="RtlCompat" />
                     </LinearLayout>
