--- a/app/src/main/res/layout/item_event_comment.xml
+++ b/app/src/main/res/layout/item_event_comment.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_12sdp"
         android:elevation="@dimen/_10sdp"
-        app:cardBackgroundColor="@color/colorBlackText"
+        app:cardBackgroundColor="@color/colorBackHome"
         app:cardCornerRadius="@dimen/_8sdp"
         app:cardElevation="@dimen/_10sdp">
 
@@ -22,8 +22,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgCommentProfile"
-                android:layout_width="@dimen/_50sdp"
-                android:layout_height="@dimen/_50sdp"
+                android:layout_width="@dimen/_45sdp"
+                android:layout_height="@dimen/_45sdp"
                 android:src="@drawable/dummy"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +44,7 @@
                     android:layout_height="wrap_content"
                     android:text="User Name"
                     app:fontFamily="@font/poppins_medium"
-                    android:textSize="@dimen/_15ssp"
+                    android:textSize="@dimen/_13ssp"
                     android:includeFontPadding="false"
                     android:textColor="@color/white" />
 
@@ -53,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:text="2 Hours Ago"
                     app:fontFamily="@font/poppins_light"
-                    android:textSize="@dimen/_12ssp"
+                    android:textSize="@dimen/_10ssp"
                     android:includeFontPadding="false"
                     android:textColor="@color/colorHintTex"
                     android:layout_marginTop="@dimen/_3sdp"/>
@@ -78,7 +78,7 @@
                 android:paddingEnd="@dimen/_12sdp"
                 android:text="@string/dummy_event_comment"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_13ssp"
+                android:textSize="@dimen/_11ssp"
                 app:fontFamily="@font/poppins_light"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
