--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -93,6 +93,7 @@
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/tvEventLike"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/heart"
@@ -222,6 +223,7 @@
             android:padding="@dimen/_1sdp"
             android:layout_margin="@dimen/_12sdp">
             <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/editEventComment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
@@ -238,6 +240,7 @@
                 android:textColor="@color/white"/>
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imgEventCommentSend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/comment_send"/>
