--- a/app/src/main/res/layout/item_search_suggestion.xml
+++ b/app/src/main/res/layout/item_search_suggestion.xml
@@ -46,6 +46,7 @@
 
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvFollow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/back_follow"
