--- a/app/src/main/res/layout/item_home_recent_event.xml
+++ b/app/src/main/res/layout/item_home_recent_event.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintCategory"
+        android:id="@+id/constraintEvent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imageSelectCard"
+            android:id="@+id/imgEventProfile"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_centerInParent="true"
@@ -43,6 +43,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvEventManagerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:fontFamily="@font/poppins_medium"
