--- a/app/src/main/res/layout/item_home_recent_event.xml
+++ b/app/src/main/res/layout/item_home_recent_event.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="@dimen/_7sdp"
     android:layout_marginRight="@dimen/_7sdp"
+    android:layout_marginBottom="@dimen/_7sdp"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
