--- a/app/src/main/res/layout/item_home_top_story.xml
+++ b/app/src/main/res/layout/item_home_top_story.xml
@@ -10,7 +10,7 @@
 
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imgItemHomeTopStory"
+            android:id="@+id/imgItemHomeManagerCover"
             android:layout_width="@dimen/_130sdp"
             android:layout_height="@dimen/_130sdp"
             app:layout_constraintStart_toStartOf="parent"
@@ -23,18 +23,20 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imgItemHomeTopStory"
+            app:layout_constraintTop_toBottomOf="@id/imgItemHomeManagerCover"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="@dimen/_10sdp"
             android:gravity="center_vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imgHomeManagerProfile"
                 android:layout_width="@dimen/_24sdp"
                 android:layout_height="@dimen/_24sdp"
                 android:src="@drawable/dummy"
                 android:background="@drawable/back_dash_border"/>
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvHomeManagerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_5sdp"
